--- a/templates/record-patcher.html
+++ b/templates/record-patcher.html
@@ -4,36 +4,21 @@
               <li><a href="index">首页</a></li>
               <li><a href="about">关于我们</a></li>
               <li><a href="contact">联系我们</a></li>
-              <li class="active"><a href="dashboard">仪表盘</a></li>
+              <li><a href="dashboard">仪表盘</a></li>
               <li><a href="tracking">支持</a></li>
-              <li><a href="record">记录</a></li>
+              <li class="active"><a href="record">记录</a></li>
 {% endblock %}
 
 {% block content_subtitle %}
-
-        <h1>仪表盘</h1>
-        <p class="lead">概览情况，总体了解近期售后服务状态。</p>
-
+        <h1>跟踪</h1>
+        <p class="lead">这里是记录模块，可以在此记录信息。</p>
 {% endblock %}
 
 {% block content_sidebar %}
         <div class="well sidebar-nav">
             <ul class="nav nav-list">
-              <li class="nav-header">仪表盘</li>
-              <li class="active"><a href="dashboard.html">概览</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">新闻</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="news.html">新闻管理</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">关键词</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
               <li class="nav-header">消息</li>
-              <li><a href="message.html">消息查询</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">资源</li>
-              <li><a href="#">Link</a></li>
+              <li class="active"><a href="record">消息查询</a></li>
               <li><a href="#">Link</a></li>
             </ul>
         </div><!--/.well -->
