--- a/templates/general.html
+++ b/templates/general.html
@@ -13,6 +13,13 @@
         <div class="row">
             <div class="span3">
                 {% block content_sidebar %}
+                    <div class="well sidebar-nav">
+                        <ul class="nav nav-list">
+                          <li class="nav-header">消息</li>
+                          <li class="active"><a href="record">消息查询</a></li>
+                          <li><a href="#">Link</a></li>
+                        </ul>
+                    </div><!--/.well -->
                 {% endblock %}
             </div>
 
