--- a/templates/record-patcher.html
+++ b/templates/record-patcher.html
@@ -1,4 +1,12 @@
 {% extends "general.html" %}
+{% load staticfiles %}
+
+{% block headercss_1 %}
+    <link href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="{% static "bootstrap-wysiwyg-master/index.css" %}" rel="stylesheet">
+{%  endblock %}
 
 {% block navactive %}
               <li><a href="index">首页</a></li>
@@ -11,151 +19,149 @@
 
 {% block content_subtitle %}
         <h1>跟踪</h1>
-        <p class="lead">这里是记录模块，可以在此记录信息。</p>
+        <p class="lead">跟踪补充记录文件。</p>
 {% endblock %}
 
 {% block content_con %}
 
     <ul class="thumbnails">
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
+        <li class="span9">
+            <h3>订单号：xxoo，旺旺号：xxoo</h3>
+        </li>
+
+        <li class="span9">
+            <div class="thumbnail">
             <div class="caption" contenteditable="true">
             <h3>冯诺尔曼结构</h3>
-            <p>也称普林斯顿结构，是一种将程序指令存储器和数据存储器合并在一起的存储器结构。程序指令存储地址和数据存储地址指向同一个存储器的不同物理位置。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
+            <div></div>
             </div>
             </div>
         </li>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>哈佛结构</h3>
-            <p>哈佛结构是一种将程序指令存储和数据存储分开的存储器结构，它的主要特点是将程序和数据存储在不同的存储空间中，进行独立编址。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
+        <li class="span9">
+  <form name="form1" action="{% url "record_mid_patcher" %}" method='post' class="form-horizontal">{% csrf_token %}
+    <fieldset>
+        <div id="legend" class="">
+            <legend class="">售后信息创建</legend>
+        </div>
+        <div class="control-group">
+            <label class="control-label">订单状态</label>
+            <div class="controls">
+                <label class="radio">
+                    <input type="radio" name="qcstate" value=1 checked>处理中
+                </label>
+                <label class="radio">
+                    <input type="radio" name="qcstate" value=0>最终搞定
+                </label>
             </div>
-            </div>
-        </li>
+        </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+        <div class="control-group">
+            <label class="control-label">负责人</label>
+            <div class="controls"><input name="qccharger" class="input-xlarge" type="text"></div>
+        </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+        <div class="control-group">
+            <label class="control-label">所需支持</label>
+            <div class="controls"><input name="qcdemand" class="input-xlarge" type="text"></div>
+        </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>哈佛结构</h3>
-            <p>哈佛结构是一种将程序指令存储和数据存储分开的存储器结构，它的主要特点是将程序和数据存储在不同的存储空间中，进行独立编址。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
+        <div class="control-group">
+            <label class="control-label">问题描述</label>
+            <div class="controls">
             </div>
-            </div>
-        </li>
+        </div>
+                <div class="hero-unit">
+                    <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                      <div class="btn-group">
+                        <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font"><i class="icon-font"></i><b class="caret"></b></a>
+                          <ul class="dropdown-menu">
+                          </ul>
+                        </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                      <div class="btn-group">
+                        <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
+                          <ul class="dropdown-menu">
+                          <li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
+                          <li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
+                          <li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
+                          </ul>
+                      </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>哈佛结构</h3>
-            <p>哈佛结构是一种将程序指令存储和数据存储分开的存储器结构，它的主要特点是将程序和数据存储在不同的存储空间中，进行独立编址。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                      <div class="btn-group">
+                        <a class="btn" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="icon-bold"></i></a>
+                        <a class="btn" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="icon-italic"></i></a>
+                        <a class="btn" data-edit="strikethrough" title="Strikethrough"><i class="icon-strikethrough"></i></a>
+                        <a class="btn" data-edit="underline" title="Underline (Ctrl/Cmd+U)"><i class="icon-underline"></i></a>
+                      </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                      <div class="btn-group">
+                        <a class="btn" data-edit="insertunorderedlist" title="Bullet list"><i class="icon-list-ul"></i></a>
+                        <a class="btn" data-edit="insertorderedlist" title="Number list"><i class="icon-list-ol"></i></a>
+                        <a class="btn" data-edit="outdent" title="Reduce indent (Shift+Tab)"><i class="icon-indent-left"></i></a>
+                        <a class="btn" data-edit="indent" title="Indent (Tab)"><i class="icon-indent-right"></i></a>
+                      </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                      <div class="btn-group">
+                        <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="icon-align-left"></i></a>
+                        <a class="btn" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="icon-align-center"></i></a>
+                        <a class="btn" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="icon-align-right"></i></a>
+                        <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="icon-align-justify"></i></a>
+                      </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>哈佛结构</h3>
-            <p>哈佛结构是一种将程序指令存储和数据存储分开的存储器结构，它的主要特点是将程序和数据存储在不同的存储空间中，进行独立编址。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                      <div class="btn-group">
+                        <a class="btn" title="Insert picture (or just drag & drop)" id="pictureBtn"><i class="icon-picture"></i></a>
+                        <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
+                      </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                      <div class="btn-group">
+                        <a class="btn" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="icon-undo"></i></a>
+                        <a class="btn" data-edit="redo" title="Redo (Ctrl/Cmd+Y)"><i class="icon-repeat"></i></a>
+                      </div>
+                    </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
-        </li>
+                    <div id="editor">请输入内容……</div>
+                    <input name="qcnotes" type="hidden">
+                </div>
 
-        <li class="span4">
-            <div class="thumbnail"><img alt="300x200" src="../media/img/pic300200.jpg" />
-            <div class="caption" contenteditable="true">
-            <h3>改进型哈佛结构</h3>
-            <p>改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。</p>
-            <p><a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a></p>
-            </div>
-            </div>
+        <div class="control-group">
+            <label class="control-label"></label>
+            <div class="controls"><button onclick="document.getElementsByName('qcnotes')[0].value = $('#editor').wysiwyg('getContent').html();document.form1.submit();" class="btn btn-success">提交</button></div>
+        </div>
+    </fieldset>
+  </form>
         </li>
     </ul>
+{% endblock %}
 
+{% block footerjs_1 %}
+    <script src="https://mindmup.s3.amazonaws.com/lib/jquery.hotkeys.js"></script>
+    <script src="{% static "bootstrap-wysiwyg-master/bootstrap-wysiwyg.js" %}"></script>
+    <script>
+      $(function(){
+        function initToolbarBootstrapBindings() {
+          var fonts = ['Serif', 'Sans', 'Arial', 'Arial Black', 'Courier',
+                'Courier New', 'Comic Sans MS', 'Helvetica', 'Impact', 'Lucida Grande', 'Lucida Sans', 'Tahoma', 'Times',
+                'Times New Roman', 'Verdana'],
+                fontTarget = $('[title=Font]').siblings('.dropdown-menu');
+          $.each(fonts, function (idx, fontName) {
+              fontTarget.append($('<li><a data-edit="fontName ' + fontName +'" style="font-family:\''+ fontName +'\'">'+fontName + '</a></li>'));
+          });
+          $('a[title]').tooltip({container:'body'});
+            $('.dropdown-menu input').click(function() {return false;})
+                .change(function () {$(this).parent('.dropdown-menu').siblings('.dropdown-toggle').dropdown('toggle');})
+            .keydown('esc', function () {this.value='';$(this).change();});
+
+          $('[data-role=magic-overlay]').each(function () {
+            var overlay = $(this), target = $(overlay.data('target'));
+            overlay.css('opacity', 0).css('position', 'absolute').offset(target.offset()).width(target.outerWidth()).height(target.outerHeight());
+          });
+        }
+        initToolbarBootstrapBindings();
+        $('#editor').wysiwyg();
+        window.prettyPrint && prettyPrint();
+      });
+
+    </script>
 {% endblock %}
