--- a/templates/record-seacher.html
+++ b/templates/record-seacher.html
@@ -10,8 +10,8 @@
 {% endblock %}
 
 {% block content_subtitle %}
-        <h1>跟踪</h1>
-        <p class="lead">这里是记录模块，可以在此记录信息。</p>
+        <h1>查询</h1>
+        <p class="lead">查询记录订单，输入完整订单号。</p>
 {% endblock %}
 
 {% block content_con %}
@@ -26,20 +26,9 @@
             <!-- Text input-->
             <label class="control-label" for="input01">订单ID</label>
             <div class="controls">
-                <input name="dingdanid" placeholder="placeholder" class="input-xlarge" type="text">
-                <p class="help-block">无</p>
+                <input name="gcddid" class="input-xlarge" type="text">
             </div>
         </div>
-
-        <div class="control-group">
-            <!-- Text input-->
-            <label class="control-label" for="input02">旺旺ID</label>
-            <div class="controls">
-                <input name="wangwangid"placeholder="placeholder" class="input-xlarge" type="text">
-                <p class="help-block">无</p>
-            </div>
-        </div>
-
 
         <div class="control-group">
             <label class="control-label"></label>
