--- a/templates/general.html
+++ b/templates/general.html
@@ -20,9 +20,9 @@
                 {% block content_sidebar %}
                     <div class="well sidebar-nav">
                         <ul class="nav nav-list">
-                          <li class="nav-header">消息</li>
-                          <li class="active"><a href="record">消息查询</a></li>
-                          <li><a href="#">Link</a></li>
+                          <li class="nav-header">售后记录</li>
+                          <li class="active"><a href="recordcreater">创建新订单的售后记录</a></li>
+{#                          <li><a href="#">Link</a></li>#}
                         </ul>
                     </div><!--/.well -->
                 {% endblock %}
