--- a/templates/base.html
+++ b/templates/base.html
@@ -37,12 +37,13 @@
       <script src="//cdnjs.bootcss.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
+    <!-- Fav and touch icons
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../media/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../media/ico/apple-touch-icon-114-precomposed.png">
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../media/ico/apple-touch-icon-72-precomposed.png">
                     <link rel="apple-touch-icon-precomposed" href="../media/ico/apple-touch-icon-57-precomposed.png">
                                    <link rel="shortcut icon" href="../media/ico/favicon.png">
+    -->
   </head>
 
   <body>
