--- a/templates/general.html
+++ b/templates/general.html
@@ -21,7 +21,10 @@
                     <div class="well sidebar-nav">
                         <ul class="nav nav-list">
                           <li class="nav-header">售后记录</li>
-                          <li class="active"><a href="recordcreater">创建新订单的售后记录</a></li>
+                          <li><a href="recordcreate">创建新售后记录</a></li>
+                          <li><a href="recordlist?state=pending">查看未解决售后</a></li>
+                          <li><a href="recordlist?state=complete">查看已解决售后</a></li>
+                          <li><a href="recordlist?state=all">查看全部售后</a></li>
 {#                          <li><a href="#">Link</a></li>#}
                         </ul>
                     </div><!--/.well -->
