--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 
 {% block navactive %}
-              <li class="active"><a href="index">首页</a></li>
-              <li><a href="about">关于我们</a></li>
-              <li><a href="contact">联系我们</a></li>
-              <li><a href="dashboard">仪表盘</a></li>
-              <li><a href="tracking">支持</a></li>
-              <li><a href="record">记录</a></li>
+    <li class="active"><a href="index">首页</a></li>
+    <li><a href="about">关于我们</a></li>
+    <li><a href="contact">联系我们</a></li>
+    <li><a href="dashboard">仪表盘</a></li>
+    <li><a href="recordlist?state=pending">售后记录</a></li>
 {#              <li class="dropdown">#}
 {#                <a href="#" class="dropdown-toggle" data-toggle="dropdown">下拉菜单<b class="caret"></b></a>#}
 {#                <ul class="dropdown-menu">#}
