--- a/templates/recordpatch.html
+++ b/templates/recordpatch.html
@@ -23,60 +23,39 @@
 
 {% block content_con %}
 
-
-    <form name="form2" action="{% url "record_mid_creater" %}" method='post' class="form-horizontal">{% csrf_token %}
+    <form name="form2" action="{% url "patcher" %}" method='post' class="form-horizontal">{% csrf_token %}
         <fieldset>
             <div id="legend" class="">
-                <legend class="">售后信息创建</legend>
+                <legend class="">处理售后</legend>
             </div>
 
             <div class="control-group">
-                <!-- Text input-->
-                <label class="control-label">订单ID</label>
-                <div class="controls"><input name="qcddid" class="input-xlarge" type="text"></div>
+                <label class="control-label">处理人</label>
+                <div class="controls"><input name="Head" class="input-xlarge" type="text"></div>
             </div>
-
             <div class="control-group">
-                <label class="control-label">旺旺ID</label>
-                <div class="controls"><input name="qcwwid" class="input-xlarge" type="text"></div>
+                <label class="control-label">处理结果</label>
+                <div class="controls"><input name="ProcessResultsSummary" class="input-xlarge" type="text"></div>
             </div>
-
             <div class="control-group">
                 <label class="control-label">订单状态</label>
                 <div class="controls">
-                    <label class="radio">
-                        <input type="radio" name="qcstate" value=1 checked>处理中
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="qcstate" value=0>最终搞定
-                    </label>
+                    <label class="radio"><input type="radio" name="State" value=0 checked>未处理</label>
+                    <label class="radio"><input type="radio" name="State" value=1>处理完成</label>
                 </div>
             </div>
 
             <div class="control-group">
-                <label class="control-label">负责人</label>
-                <div class="controls"><input name="qccharger" class="input-xlarge" type="text"></div>
-            </div>
-
-            <div class="control-group">
-                <label class="control-label">所需支持</label>
-                <div class="controls"><input name="qcdemand" class="input-xlarge" type="text"></div>
-            </div>
-
-            <div class="control-group">
-                <label class="control-label">问题描述</label>
-                <div class="controls">
-                </div>
+                <label class="control-label">处理结果补充</label>
+                <div class="controls"></div>
             </div>
             <div class="hero-unit">
                 <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
-
                     <div class="btn-group">
                         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font"><i class="icon-font"></i><b class="caret"></b></a>
                         <ul class="dropdown-menu">
                         </ul>
                     </div>
-
                     <div class="btn-group">
                         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -85,46 +64,41 @@
                             <li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
                         </ul>
                     </div>
-
                     <div class="btn-group">
                         <a class="btn" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="icon-bold"></i></a>
                         <a class="btn" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="icon-italic"></i></a>
                         <a class="btn" data-edit="strikethrough" title="Strikethrough"><i class="icon-strikethrough"></i></a>
                         <a class="btn" data-edit="underline" title="Underline (Ctrl/Cmd+U)"><i class="icon-underline"></i></a>
                     </div>
-
                     <div class="btn-group">
                         <a class="btn" data-edit="insertunorderedlist" title="Bullet list"><i class="icon-list-ul"></i></a>
                         <a class="btn" data-edit="insertorderedlist" title="Number list"><i class="icon-list-ol"></i></a>
                         <a class="btn" data-edit="outdent" title="Reduce indent (Shift+Tab)"><i class="icon-indent-left"></i></a>
                         <a class="btn" data-edit="indent" title="Indent (Tab)"><i class="icon-indent-right"></i></a>
                     </div>
-
                     <div class="btn-group">
                         <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="icon-align-left"></i></a>
                         <a class="btn" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="icon-align-center"></i></a>
                         <a class="btn" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="icon-align-right"></i></a>
                         <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="icon-align-justify"></i></a>
                     </div>
-
                     <div class="btn-group">
                         <a class="btn" title="Insert picture (or just drag & drop)" id="pictureBtn"><i class="icon-picture"></i></a>
                         <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
                     </div>
-
                     <div class="btn-group">
                         <a class="btn" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="icon-undo"></i></a>
                         <a class="btn" data-edit="redo" title="Redo (Ctrl/Cmd+Y)"><i class="icon-repeat"></i></a>
                     </div>
                 </div>
-
-                <div id="editor">请输入内容……</div>
-                <input name="qcnotes" type="hidden">
+                <div id="editor"></div>
+                <input name="ProcessResultsDescription" type="hidden">
+                <input name="ServiceCode" type="hidden">
             </div>
 
             <div class="control-group">
                 <label class="control-label"></label>
-                <div class="controls"><button onclick="document.getElementsByName('qcnotes')[0].value = $('#editor').wysiwyg('getContent').html();document.form2.submit();" class="btn btn-success">提交</button></div>
+                <div class="controls"><button onclick="document.getElementsByName('ServiceCode')[0].value = {{ servicecode }};document.getElementsByName('ProcessResultsDescription')[0].value = $('#editor').wysiwyg('getContent').html();document.form2.submit();" class="btn btn-success">提交</button></div>
             </div>
         </fieldset>
     </form>
