--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
               <li><a href="about">关于我们</a></li>
               <li><a href="contact">联系我们</a></li>
               <li class="active"><a href="dashboard">仪表盘</a></li>
-              <li><a href="recordlist?state=pending">售后记录</a></li>
+              <li><a href="recordlist">售后记录</a></li>
 {% endblock %}
 
 {% block content_subtitle %}
