--- a/templates/recordpatch.html
+++ b/templates/recordpatch.html
@@ -13,7 +13,7 @@
     <li><a href="about">关于我们</a></li>
     <li><a href="contact">联系我们</a></li>
     <li><a href="dashboard">仪表盘</a></li>
-    <li class="active"><a href="recordlist?state=pending">售后记录</a></li>
+    <li class="active"><a href="recordlist">售后记录</a></li>
 {% endblock %}
 
 {% block content_subtitle %}
@@ -31,11 +31,15 @@
 
             <div class="control-group">
                 <label class="control-label">处理人</label>
-                <div class="controls"><input name="Head" class="input-xlarge" type="text"></div>
+                <div class="controls"><input name="Head" class="input-xlarge" required="required" type="text">
+                    <span class="help-inline">*必填项，5个汉字以内</span>
+                </div>
             </div>
             <div class="control-group">
                 <label class="control-label">处理结果</label>
-                <div class="controls"><input name="ProcessResultsSummary" class="input-xlarge" type="text"></div>
+                <div class="controls"><input name="ProcessResultsSummary" class="input-xlarge" required="required" type="text">
+                    <span class="help-inline">*必填项，25个汉字以内</span>
+                </div>
             </div>
             <div class="control-group">
                 <label class="control-label">订单状态</label>
