--- a/templates/recordcreate.html
+++ b/templates/recordcreate.html
@@ -48,13 +48,6 @@
                 </div>
             </div>
             <div class="control-group">
-                <label class="control-label">订单状态</label>
-                <div class="controls">
-                    <label class="radio"><input type="radio" name="State" value=0 checked>未处理</label>
-                    <label class="radio"><input type="radio" name="State" value=1>处理完成</label>
-                </div>
-            </div>
-            <div class="control-group">
                 <label class="control-label">紧急情况</label>
                 <div class="controls">
                     <label class="radio"><input type="radio" name="EmergencyTreatment" value=0 checked>一般</label>
@@ -117,11 +110,12 @@
                 </div>
                 <div id="editor"></div>
                 <input name="ProblemDescription" type="hidden">
+                <input name="State" type="hidden">
             </div>
 
             <div class="control-group">
                 <label class="control-label"></label>
-                <div class="controls"><button onclick="document.getElementsByName('ProblemDescription')[0].value = $('#editor').wysiwyg('getContent').html();document.form1.submit();" class="btn btn-success">提交</button></div>
+                <div class="controls"><button onclick="document.getElementsByName('State')[0].value = 0;document.getElementsByName('ProblemDescription')[0].value = $('#editor').wysiwyg('getContent').html();document.form1.submit();" class="btn btn-success">提交</button></div>
             </div>
         </fieldset>
     </form>
