--- a/templates/recordpatch.html
+++ b/templates/recordpatch.html
@@ -41,13 +41,6 @@
                     <span class="help-inline">*必填项，25个汉字以内</span>
                 </div>
             </div>
-            <div class="control-group">
-                <label class="control-label">订单状态</label>
-                <div class="controls">
-                    <label class="radio"><input type="radio" name="State" value=0 checked>未处理</label>
-                    <label class="radio"><input type="radio" name="State" value=1>处理完成</label>
-                </div>
-            </div>
 
             <div class="control-group">
                 <label class="control-label">处理结果补充</label>
@@ -98,11 +91,12 @@
                 <div id="editor"></div>
                 <input name="ProcessResultsDescription" type="hidden">
                 <input name="ServiceCode" type="hidden">
+                <input name="State" type="hidden">
             </div>
 
             <div class="control-group">
                 <label class="control-label"></label>
-                <div class="controls"><button onclick="document.getElementsByName('ServiceCode')[0].value = {{ servicecode }};document.getElementsByName('ProcessResultsDescription')[0].value = $('#editor').wysiwyg('getContent').html();document.form2.submit();" class="btn btn-success">提交</button></div>
+                <div class="controls"><button onclick="document.getElementsByName('State')[0].value = 1;document.getElementsByName('ServiceCode')[0].value = {{ servicecode }};document.getElementsByName('ProcessResultsDescription')[0].value = $('#editor').wysiwyg('getContent').html();document.form2.submit();" class="btn btn-success">提交</button></div>
             </div>
         </fieldset>
     </form>
